Refactor: Readiness | assessment complete